# gcw

./: README.md
A1_hello/: BUILD.gn  bundle.json
A1_hello/src/: helloworld.c
A2_uart/: BUILD.gn  bundle.json
A2_uart/src/: uart_test.c
A3_gpio/: BUILD.gn  bundle.json
A3_gpio/src/: gpio_test.c
A4_napi_gpio/: BUILD.gn  bundle.json  readme.md
A4_napi_gpio/src/: gpio_hdf.cpp  napi_gpio.c  napi_gpio.cpp
B1_hello/: BUILD.gn  bundle.json  readme.md
B1_hello/include/: helloworld.h
B1_hello/src/: helloworld.c
