import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

print("gcw  gpio_test BUILD.gn file")
ohos_executable("A3_gcwgpio") {
  sources = [ "src/gpio_test.c" ]
  include_dirs = [
    "include", 
    "//drivers/hdf_core/framework/include/platform",
    "//third_party/bounds_checking_function/include",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdf_platform",
    "hilog:libhilog",
  ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]

  part_name = "A3_gpio" 
  install_enable = true       
}
