import("//build/ohos.gni")  # 导入编译模板
ohos_executable("B1helloworld") { # 可执行模块
  sources = [       # 模块源码
    "src/helloworld.c"
  ]
  include_dirs = [  # 模块依赖头文件目录
    "include" 
  ]
  cflags = []
  cflags_c = []
  cflags_cc = []
  ldflags = []
  configs = []
  deps =[]    # 部件内部依赖
  part_name = "B1_helloworld"    # 所属部件名称，必选
  install_enable = true  # 是否默认安装（缺省默认不安装），可选
}
